<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="@dimen/dp_16"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
            android:id="@+id/btnDialogBrightness"
            android:text="@string/Dialog_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnDialogPicketNumber"
            android:text="@string/Dialog_picket_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnDialogPickTopping"
            android:text="@string/Dialog_pick_topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnDialogTimesPicket"
            android:text="@string/Dialog_Time_picket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnDialogDataPicket"
            android:text="@string/Dialog_Data_picket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>