<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="@dimen/dp_16"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
            android:id="@+id/tvTitle"
            android:text="@string/title_topping"
            android:textSize="@dimen/sp_32"
            android:textColor="@color/colorTextToping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <View
            android:background="@color/colorTextToping"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout
                android:padding="@dimen/dp_16"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <TextView
                    android:id="@+id/tvOnion"
                    android:text="@string/Onion"
                    android:textSize="@dimen/sp_28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <CheckBox
                    android:id="@+id/cbOnion"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </FrameLayout>
        <FrameLayout
                android:padding="@dimen/dp_16"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <TextView
                    android:id="@+id/tvLettuce"
                    android:text="@string/Lettuce"
                    android:textSize="@dimen/sp_28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <CheckBox
                    android:id="@+id/cbLettuce"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </FrameLayout>
        <FrameLayout
                android:padding="@dimen/dp_16"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <TextView
                    android:id="@+id/tvTomato"
                    android:text="@string/Onion"
                    android:textSize="@dimen/sp_28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <CheckBox
                    android:id="@+id/cbTomato"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </FrameLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <Button
                    android:id="@+id/btnCancel"
                    android:layout_weight="1"
                    android:textSize="@dimen/sp_16"
                    android:text="@string/Cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            <Button
                    android:id="@+id/btnOK"
                    android:layout_weight="1"
                    android:textSize="@dimen/sp_16"
                    android:text="@string/OK"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>