<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/background_brightness"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
            android:padding="@dimen/dp_16"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/brightness"
                android:layout_width="32dp"
                android:layout_height="32dp"/>
        <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/Brightness"
                android:textSize="@dimen/sp_32"
                android:textColor="@color/colorTextToping"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
            android:background="@color/colorTextToping"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
    <LinearLayout
            android:padding="@dimen/dp_16"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
                style="@style/my_checkbox_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:textColor="@color/colorTextAutomatic"
                android:layout_marginLeft="@dimen/dp_16"
                android:textSize="@dimen/sp_16"
                android:text="@string/Automatic_Brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <SeekBar
            style="@style/MySeekBar"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        <Button
                android:background="?attr/selectableItemBackground"
                android:text="@string/Cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

        <Button
                android:background="?attr/selectableItemBackground"
                android:text="@string/OK"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

    </LinearLayout>
</LinearLayout>